k8s/notifications/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications
  template:
    metadata:
     labels:
       app: notifications
    spec:
      containers:
        - image: notifications:0.1
          imagePullPolicy: Never
          name: notifications
          ports:
            - containerPort: 8080
