k8s/notifications/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: notifications
