k8s/notifications/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notifications-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/notifications
            pathType: "Prefix"
            backend:
              service:
                name: notifications-service
                port:
                  number: 80
